# advent_lib

./: .gitignore  Cargo.toml  README.md
src/: algorithm.rs  bits.rs  coords.rs  geom.rs  grid.rs  infinite_grid.rs  iter.rs  lib.rs  math.rs  range.rs  read.rs  read2.rs  vm_debugger.rs  vm_display.rs  vm_shell.rs
templates/: basic.rs  fromstr.rs  fromstr_regex.rs  grid.rs
