[package]
name = "advent_lib"
version = "0.2.0"
authors = ["Heath Kehoe <yaheath@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
itertools = "0.11.0"
lazy_static = "*"
num = "*"
rand = "0.8.5"
ratatui = "0.23.0"
tui-input = "0.8.0"
