[package]
name = "ya_advent_lib"
version = "1.4.0"
description = "Yet Another Advent of Code Library"
authors = ["Heath Kehoe <yaheath@gmail.com>"]
edition = "2021"
license = "CC-BY-SA-4.0"
repository = "https://github.com/yaheath/advent_lib"
homepage = "https://github.com/yaheath"
readme = "README.md"

[dependencies]
crossterm = "0.27.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
num = "0.4.1"
rand = "0.8.5"
ratatui = "0.23.0"
regex = "1.10.2"
tui-input = "0.8.0"
