[package]
name = "ya_advent_lib"
version = "1.5.0"
description = "Yet Another Advent of Code Library"
authors = ["Heath Kehoe <yaheath@gmail.com>"]
edition = "2021"
license = "CC-BY-SA-4.0"
repository = "https://github.com/yaheath/advent_lib"
homepage = "https://github.com/yaheath"
readme = "README.md"

[dependencies]
crossterm = "0.28.1"
itertools = "0.13.0"
lazy_static = "1.4.0"
num = "0.4.3"
rand = "0.8.5"
ratatui = "0.29.0"
regex = "1.11.1"
tui-input = "0.11.1"
